--- a/package.json
+++ b/package.json
@@ -7,7 +7,26 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "express": "~4.9.x",
+    "bluebird": "^2.3.2",
+    "body-parser": "^1.8.3",
+    "errorhandler": "^1.2.0",
+    "express": "^4.9.4",
+    "express-winston": "^0.2.8",
+    "fakeredis": "^0.2.1",
+    "jade": "^1.7.0",
+    "method-override": "^2.2.0",
+    "morgan": "^1.3.1",
+    "redis": "^0.12.1",
+    "should": "^4.0.4",
+    "stylus": "^0.49.0",
+    "winston": "^0.8.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.0.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-ts": "^1.12.1"
   },
   "engines": {
     "node": "0.10.x"
