--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "~4.9.x",
+    "bcryptjs": "^2.1.0",
     "bluebird": "^2.3.2",
     "body-parser": "^1.8.3",
     "errorhandler": "^1.2.0",
