--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jade": "^1.7.0",
     "method-override": "^2.2.0",
     "morgan": "^1.3.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "redis": "^0.12.1",
     "should": "^4.0.4",
     "stylus": "^0.49.0",
