--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.8.3",
     "errorhandler": "^1.2.0",
     "express": "^4.9.4",
+    "express-session": "^1.9.1",
     "express-winston": "^0.2.8",
     "fakeredis": "^0.2.1",
     "jade": "^1.7.0",
