--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.0.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-notify": "^0.3.1",
     "grunt-ts": "^1.12.1"
   },
   "engines": {
