--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.1.0",
     "bluebird": "^2.3.2",
     "body-parser": "^1.8.3",
+    "diff": "^1.0.8",
     "errorhandler": "^1.2.0",
     "express": "^4.9.4",
     "express-session": "^1.9.1",
