--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jade": "^1.7.0",
     "method-override": "^2.2.0",
     "morgan": "^1.3.1",
+    "multer": "^0.1.7",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "redis": "^0.12.1",
